# Tree-Sitter-Sifu

./: .gitignore  README.md  build.zig  build.zig.zon
src/: main.zig  root.zig
tests/: test-2.sifu  test-3.sifu  test-5.sifu  test-8.sifu
tree-sitter-sifu/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-sifu/bindings/c/: tree-sitter-sifu.pc.in
tree-sitter-sifu/bindings/c/tree_sitter/: tree-sitter-sifu.h
tree-sitter-sifu/src/: grammar.json  node-types.json  parser.c
