[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-sifu"
description = "The Sifu Programming Language Parser"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "sifu"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Hugh Fox", email = "checkmateguy@gmail.com" }]
requires-python = ">=3.10"
license.text = "Apache 2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/hugh-fox/sifu"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
